--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -8,11 +8,13 @@
         <h3 class="box-title m-b-20 text-center">Inicio de Sesión</h3>
         <div class="form-group ">
           <div class="col-xs-12">
-            <input class="form-control" type="text" required="" placeholder="Usuario"> </div>
+            <input class="form-control" type="text" required="" name="username" placeholder="Usuario" [(ngModel)]="username">
+          {{username}}
+          </div>
         </div>
         <div class="form-group">
           <div class="col-xs-12">
-            <input class="form-control" type="password" required="" placeholder="Contraseña"> </div>
+            <input class="form-control" type="password" required="" name="password" placeholder="Contraseña"  [(ngModel)]="password"> </div>
         </div>
         <div class="form-group row">
           <div class="col-md-12 font-14">
@@ -24,7 +26,7 @@
         </div>
         <div class="form-group text-center m-t-20">
           <div class="col-xs-12">
-            <a style="color:white;" class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" [routerLink]="['/component/Billetera']" (click)="onLoggedin()">Iniciar Sesión</a>
+            <a style="color:white;" class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light"  (click)="onLoggedin()">Iniciar Sesión</a>
           </div>
         </div>
         <a href="javascript:void(0)" id="to-recover" class="text-dark"><i class="fa fa-lock m-r-5"></i> Olvidaste tu contraseña?</a>
