arreglar layout de html - Roberto Cueva

--- a/src/app/dashboards/dashboard1/dashboard1.component.html
+++ b/src/app/dashboards/dashboard1/dashboard1.component.html
@@ -84,15 +84,24 @@
 <!-- Report and Comments -->
 <!-- ============================================================== -->
 <!-- Row -->
-<div class="row">
-    <div class="col-lg-6">
+<div class=" row h-100 justify-content-center align-items-center ">
+    <div class="col-lg-4 ">
         <!-- You can find this in the dashboard-component -->
         <app-billetera></app-billetera>
     </div>
-    <div class="col-lg-6">
+</div>
+<div class=" row h-100 justify-content-center align-items-center ">
+    <div class="col-lg-12">
         <!-- You can find this in the dashboard-component -->
-        <recent-comment></recent-comment>
+        <app-cambiarmillas></app-cambiarmillas>
     </div>
+</div>
+<div class=" row h-100 justify-content-center align-items-center ">
+<div>
+    <div class="col-lg-12">
+        <app-cobrarmillas></app-cobrarmillas>
+    </div>
+</div>
 </div>
 <!-- Row -->
 <!-- ============================================================== -->
