cambiar texto a comercio - Roberto Cueva

--- a/src/app/shared/header-navigation/navigation.component.html
+++ b/src/app/shared/header-navigation/navigation.component.html
@@ -125,8 +125,8 @@
                                 <div class="dw-user-box">
                                     <div class="u-img"><img src="assets/images/users/lego-face.png" alt="user"></div>
                                     <div class="u-text">
-                                        <h4>Operador</h4>
-                                        <p class="text-muted">operador@kruger.com.ec</p><a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
+                                        <h4>Comercio</h4>
+                                        <p class="text-muted">comercio@kruger.com.ec</p><a href="pages-profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
                                 </div>
                             </li>
                             <li role="separator" class="divider"></li>
