cambiar campor para que salga el que esta logeado - Roberto Cueva

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
     </div>
     <!-- User profile text-->
     <div class="profile-text">
-        <h5>Operador</h5>
+        <h5>{{usuario.nombre}}</h5>
         
         <a ngbDropdownToggle ngbDropdown href="javascript:void(0)" class="u-dropdown"><i class="mdi mdi-settings"></i>
         <div class="dropdown-menu animated flipInY" ngbDropdownMenu>
